feat: add large message support and remove deprecated features